--- a/style/css/main.css
+++ b/style/css/main.css
@@ -14,7 +14,88 @@
           box-sizing: border-box;
 }
 
-:root {
-  --mont: "Montserrat";
-  --roboto: "Roboto";
+.wrapper {
+  margin: 120px auto;
+  padding: 26px 15px 32px;
+  width: 320px;
+  height: 568px;
+  background-color: #141414;
+}
+.wrapper #header .title {
+  font-family: "Montserrat";
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 2px;
+  color: #ffffff;
+}
+.wrapper #header .header__boxForFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.wrapper #main .container {
+  margin: 26px 0px 32px;
+}
+.wrapper #main .container .info .imgBox {
+  margin-bottom: 16px;
+}
+.wrapper #main .container .info .box__forInfoSong {
+  margin: 0px 10px;
+  font-family: "Montserrat";
+  letter-spacing: 1px;
+  color: #ffffff;
+}
+.wrapper #main .container .info .box__forInfoSong .name {
+  display: inline-block;
+  margin-bottom: 5px;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 35px;
+}
+.wrapper #main .container .info .box__forInfoSong .singer {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 21px;
+}
+.wrapper #main .container .box__progress {
+  margin: 25px 0px 32px 10px;
+  width: 270px;
+  height: 4px;
+  border-radius: 3px;
+  background-color: #ffffff;
+  cursor: pointer;
+}
+.wrapper #main .container .box__progress .progress {
+  width: 70px;
+  height: 4px;
+  border-radius: 3px;
+  background-color: #5bb9ee;
+}
+.wrapper .navbar {
+  padding: 0px 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.wrapper .navbar .navbar__prev .navbar__srcIconPrev {
+  cursor: pointer;
+}
+.wrapper .navbar .navbar__playAndPause .navbar__srcIconPlay {
+  cursor: pointer;
+}
+.wrapper .navbar .navbar__next .navbar__srcIconNext {
+  cursor: pointer;
 }
