--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -12,7 +12,96 @@
   box-sizing: border-box;
 }
 
-:root {
-  --mont: 'Montserrat';
-  --roboto: 'Roboto';
+.wrapper {
+  margin: 120px auto;
+  padding: 26px 15px 32px;
+  width: 320px;
+  height: 568px;
+  background-color: #141414;
+  #header {
+    .title {
+      font-family: 'Montserrat';
+      font-weight: 300;
+      font-size: 20px;
+      line-height: 24px;
+      letter-spacing: 2px;
+      color: #ffffff;
+    }
+    .header__boxForFlex {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
+
+  #main {
+    .container {
+      margin: 26px 0px 32px;
+      .info {
+        .imgBox {
+          margin-bottom: 16px;
+          .img {
+          }
+        }
+
+        .box__forInfoSong {
+          margin: 0px 10px;
+          font-family: 'Montserrat';
+          letter-spacing: 1px;
+          color: #ffffff;
+          .name {
+            display: inline-block;
+            margin-bottom: 5px;
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 35px;
+          }
+          .singer {
+            font-weight: 300;
+            font-size: 18px;
+            line-height: 21px;
+          }
+        }
+      }
+
+      .box__progress {
+        margin: 25px 0px 32px 10px;
+        width: 270px;
+        height: 4px;
+        border-radius: 3px;
+        background-color: #ffffff;
+        cursor: pointer;
+        .progress {
+          width: 70px;
+          height: 4px;
+          border-radius: 3px;
+          background-color: #5bb9ee;
+        }
+      }
+    }
+  }
+
+  .navbar {
+    padding: 0px 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .navbar__prev {
+      .navbar__srcIconPrev {
+        cursor: pointer;
+      }
+    }
+
+    .navbar__playAndPause {
+      .navbar__srcIconPlay {
+        cursor: pointer;
+      }
+    }
+
+    .navbar__next {
+      .navbar__srcIconNext {
+        cursor: pointer;
+      }
+    }
+  }
 }
